# gitchi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/actions/check-pet/: README.md  action.yml  check_pet.py
.github/workflows/: ci.yml  release.yml
docs/: spec.md
docs/superpowers/plans/: 2026-05-11-tui-improvements.md
docs/superpowers/specs/: 2026-05-10-tui-improvements-design.md
src/gitchi/: __init__.py  __main__.py  art.py  cli.py  config.py  cron.py  history.py  menubar.py  models.py  news.py  rarity.py  refresh.py  species.py  store.py  tui.py  verbs.py
src/gitchi/migrations/: 001_initial.sql  002_v0_2.sql  003_rarities.sql  004_play_results.sql
src/gitchi/tui/: __init__.py  animation.py  state.py  status_reason.py  themes.py
src/gitchi/tui/widgets/: detail_panel.py  news_panel.py  pet_table.py  search_input.py
src/tama/: __init__.py  __main__.py  art.py  claude.py  cli.py  config.py  cron.py  github.py  history.py  local_energy.py  menubar.py  models.py  news.py  refresh.py  scanner.py  stats.py  store.py  tui.py  verbs.py
tests/: conftest.py  test_art.py  test_cli_theme.py  test_config.py  test_history.py  test_ignore.py  test_local_energy.py  test_menubar.py  test_news.py  test_play_results.py  test_rarity.py  test_refresh.py  test_scanner.py  test_species.py  test_stats.py  test_store.py  test_verbs.py
tests/tui/: test_animation.py  test_app_smoke.py  test_state.py  test_status_reason.py  test_themes.py
