[project]
name = "gitchi"
version = "0.6.0"
description = "A virtual pet for every git repo. Your codebase as a tamagotchi."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Pedro Correia Luis" }
]
requires-python = ">=3.12"
keywords = ["git", "tamagotchi", "tui", "developer-tools", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.85.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "platformdirs>=4.3.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
menubar = ["rumps>=0.4.0; sys_platform == 'darwin'"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
gitchi = "gitchi.cli:app"
gitchi-menubar = "gitchi.menubar:main"

[project.urls]
Homepage = "https://github.com/PedroCorreiaLuis/gitchi"
Repository = "https://github.com/PedroCorreiaLuis/gitchi"
Issues = "https://github.com/PedroCorreiaLuis/gitchi/issues"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["slow: marks tests as slow"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
